traefik_staging/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirectscheme
spec:
  redirectScheme:
    permanent: true
    scheme: https

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: main
  annotations:
    cert-manager.io/issuer: letsencrypt-staging
spec:
  # tls:
  #   certResolver: letsencrypt
  #   secretName: proactivemonitoring
  #   domains:
  #     - main: monitoring.staging.ronpos.com
  #       sans:
  #         - dashboard.monitoring.staging.ronpos.com
  #         - prometheus.monitoring.staging.ronpos.com
  #         - otlpv2.monitoring.staging.ronpos.com
  entryPoints:
    - web
  routes:
    - match: Host(`otlpv2.monitoring.staging.ronpos.com`)
      kind: Rule
      services:
        - name: agent-opentelemetry-collector-grpc
          port: 4317
          scheme: h2c
          passHostHeader: true
      # middlewares:
      #   - name: https-redirectscheme
    - match: Host(`dashboard.monitoring.staging.ronpos.com`)
      kind: Rule
      services:
        - name: opensearch-dashboards
          port: 5601 
      # middlewares:
      #   - name: https-redirectscheme
    - match: Host(`prometheus.monitoring.staging.ronpos.com`)
      kind: Rule
      services:
        - name: prometheus-service
          port: 9090
      # middlewares:
      #   - name: https-redirectscheme
